networkpolicy/calico/stress-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: stress
  namespace: skills
spec:
  selector: type == 'stress'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      source: {}
  egress:
    - action: Deny
      destination:
        selector: type == 'match'
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 443
          - 80
    - action: Allow
      protocol: UDP
      destination:
        ports:
          - 53
    - action: Allow
      destination:
        selector: type == 'stress'
